--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>TechCon | Home</title>
   </head>
   <body>
     <header>
-      <h1>About TechCon 2024</h1>
+      <h1>TechCon</h1>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="register.html">Register</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -18,45 +18,27 @@
       </nav>
     </header>
     <main>
-      <article>
-        <h3>History</h3>
-        Africa Tech Summit: First held in 2016, this event aims to foster growth
-        in the African tech ecosystem and has been hosted in cities like Lagos,
-        Kigali, and Nairobi.
-      </article>
-      <article>
-        <h3>Our Vision</h3>
-        We envision an Africa where technology empowers economic growth,
-        enhances governance, and fosters sustainable development through
-        knowledge-sharing, collaboration, and groundbreaking innovations.
-      </article>
-
-      <article>
-        <h3>Our Mission</h3>
-        TechCon's mission is to accelerate Africa's digital transformation by
-        creating a platform where stakeholders from various industries can
-        learn, collaborate, and innovate using emerging technologies.
-      </article>
-      <article>
-        <h3>Past Speakers</h3>
-        TechCon is a multi-platform technology conference that brings together
-        unites top tech minds, decision-makers, and disruptors to explore the
-        transformative power of technology. This dynamic event explores the
-        latest advancements in technology and their impact on sectors such as
-        government, finance, education, and business.
-      </article>
-      <article>
-        <img
-          src="https://www.uaba.io/images/events/techcontz.jpg"
-          alt="techcon"
-          width="440"
-          height="340"
-        />
-      </article>
+      <section>
+        <p>
+          AI, or Artificial Intelligence, is a field of computer science focused
+          on creating systems that can perform tasks requiring human-like
+          intelligence, such as learning, problem-solving, decision-making, and
+          speech recognition. It works by enabling machines to perceive their
+          environment, process data, and act to achieve goals, adapting their
+          behavior over time by analyzing the results of their actions. AI has
+          many usage examples, including digital assistants, personalized
+          recommendations, and smart appliances, all of which are common parts
+          of daily life.
+        </p>
+      </section>
+      <video width="320" height="240" controls>
+        <source src="resource/movie.mp4" type="video/mp4" />
+        wha, deb and regb
+      </video>
     </main>
     <footer>
       <style>
-        .copyright-container {
+        .copyright-container{
           text-align: center;
           gap: 5px;
         }
